src/parser.output
Terminals unused in grammar

    EXP
    ALPHABET


Grammar

    0 $accept: s $end

    1 s: s ';'
    2  | s TEST
    3  | s HELP
    4  | s CLASSES
    5  | s EXIT
    6  | s JEP
    7  | s SHOW_TIMEOUT
    8  | s TIMEOUT
    9  | s SHOW_LIMIT
   10  | s LIMIT
   11  | s SHOW_HISTORY
   12  | s HISTORY
   13  | s COMMAND '.' COMMAND '[' COMMAND ']' '=' cc ';'
   14  | s COMMAND '=' cc ';'
   15  | s cc ';'
   16  | s LEXICAL_ERROR ';'
   17  | s error ';'
   18  | ε

   19 cp: cc ')'
   20   | cc ',' cp

   21 cc: COMMAND '.' cc
   22   | COMMAND '(' cp
   23   | COMMAND '[' COMMAND ']'
   24   | COMMAND
   25   | FILENAME


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 22
    ')' (41) 19
    ',' (44) 20
    '.' (46) 13 21
    ';' (59) 1 13 14 15 16 17
    '=' (61) 13 14
    '[' (91) 13 23
    ']' (93) 13 23
    error (256) 17
    COMMAND <name> (258) 13 14 21 22 23 24
    FILENAME <name> (259) 25
    EXP <name> (260)
    JEP (261) 6
    TIMEOUT <integer> (262) 8
    SHOW_TIMEOUT <integer> (263) 7
    LIMIT <integer> (264) 10
    SHOW_LIMIT <integer> (265) 9
    HISTORY <integer> (266) 12
    SHOW_HISTORY <integer> (267) 11
    HELP (268) 3
    ALPHABET <carac> (269)
    CLASSES (270) 4
    TEST (271) 2
    EXIT (272) 5
    LEXICAL_ERROR (273) 16


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    s (28)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
    cp <com_parameters> (29)
        on left: 19 20
        on right: 20 22
    cc <com_command> (30)
        on left: 21 22 23 24 25
        on right: 13 14 15 19 20 21


State 0

    0 $accept: • s $end

    $default  reduce using rule 18 (s)

    s  go to state 1


State 1

    0 $accept: s • $end
    1 s: s • ';'
    2  | s • TEST
    3  | s • HELP
    4  | s • CLASSES
    5  | s • EXIT
    6  | s • JEP
    7  | s • SHOW_TIMEOUT
    8  | s • TIMEOUT
    9  | s • SHOW_LIMIT
   10  | s • LIMIT
   11  | s • SHOW_HISTORY
   12  | s • HISTORY
   13  | s • COMMAND '.' COMMAND '[' COMMAND ']' '=' cc ';'
   14  | s • COMMAND '=' cc ';'
   15  | s • cc ';'
   16  | s • LEXICAL_ERROR ';'
   17  | s • error ';'

    $end           shift, and go to state 2
    error          shift, and go to state 3
    COMMAND        shift, and go to state 4
    FILENAME       shift, and go to state 5
    JEP            shift, and go to state 6
    TIMEOUT        shift, and go to state 7
    SHOW_TIMEOUT   shift, and go to state 8
    LIMIT          shift, and go to state 9
    SHOW_LIMIT     shift, and go to state 10
    HISTORY        shift, and go to state 11
    SHOW_HISTORY   shift, and go to state 12
    HELP           shift, and go to state 13
    CLASSES        shift, and go to state 14
    TEST           shift, and go to state 15
    EXIT           shift, and go to state 16
    LEXICAL_ERROR  shift, and go to state 17
    ';'            shift, and go to state 18

    cc  go to state 19


State 2

    0 $accept: s $end •

    $default  accept


State 3

   17 s: s error • ';'

    ';'  shift, and go to state 20


State 4

   13 s: s COMMAND • '.' COMMAND '[' COMMAND ']' '=' cc ';'
   14  | s COMMAND • '=' cc ';'
   21 cc: COMMAND • '.' cc
   22   | COMMAND • '(' cp
   23   | COMMAND • '[' COMMAND ']'
   24   | COMMAND •

    '='  shift, and go to state 21
    '.'  shift, and go to state 22
    '['  shift, and go to state 23
    '('  shift, and go to state 24

    $default  reduce using rule 24 (cc)


State 5

   25 cc: FILENAME •

    $default  reduce using rule 25 (cc)


State 6

    6 s: s JEP •

    $default  reduce using rule 6 (s)


State 7

    8 s: s TIMEOUT •

    $default  reduce using rule 8 (s)


State 8

    7 s: s SHOW_TIMEOUT •

    $default  reduce using rule 7 (s)


State 9

   10 s: s LIMIT •

    $default  reduce using rule 10 (s)


State 10

    9 s: s SHOW_LIMIT •

    $default  reduce using rule 9 (s)


State 11

   12 s: s HISTORY •

    $default  reduce using rule 12 (s)


State 12

   11 s: s SHOW_HISTORY •

    $default  reduce using rule 11 (s)


State 13

    3 s: s HELP •

    $default  reduce using rule 3 (s)


State 14

    4 s: s CLASSES •

    $default  reduce using rule 4 (s)


State 15

    2 s: s TEST •

    $default  reduce using rule 2 (s)


State 16

    5 s: s EXIT •

    $default  reduce using rule 5 (s)


State 17

   16 s: s LEXICAL_ERROR • ';'

    ';'  shift, and go to state 25


State 18

    1 s: s ';' •

    $default  reduce using rule 1 (s)


State 19

   15 s: s cc • ';'

    ';'  shift, and go to state 26


State 20

   17 s: s error ';' •

    $default  reduce using rule 17 (s)


State 21

   14 s: s COMMAND '=' • cc ';'

    COMMAND   shift, and go to state 27
    FILENAME  shift, and go to state 5

    cc  go to state 28


State 22

   13 s: s COMMAND '.' • COMMAND '[' COMMAND ']' '=' cc ';'
   21 cc: COMMAND '.' • cc

    COMMAND   shift, and go to state 29
    FILENAME  shift, and go to state 5

    cc  go to state 30


State 23

   23 cc: COMMAND '[' • COMMAND ']'

    COMMAND  shift, and go to state 31


State 24

   22 cc: COMMAND '(' • cp

    COMMAND   shift, and go to state 27
    FILENAME  shift, and go to state 5

    cp  go to state 32
    cc  go to state 33


State 25

   16 s: s LEXICAL_ERROR ';' •

    $default  reduce using rule 16 (s)


State 26

   15 s: s cc ';' •

    $default  reduce using rule 15 (s)


State 27

   21 cc: COMMAND • '.' cc
   22   | COMMAND • '(' cp
   23   | COMMAND • '[' COMMAND ']'
   24   | COMMAND •

    '.'  shift, and go to state 34
    '['  shift, and go to state 23
    '('  shift, and go to state 24

    $default  reduce using rule 24 (cc)


State 28

   14 s: s COMMAND '=' cc • ';'

    ';'  shift, and go to state 35


State 29

   13 s: s COMMAND '.' COMMAND • '[' COMMAND ']' '=' cc ';'
   21 cc: COMMAND • '.' cc
   22   | COMMAND • '(' cp
   23   | COMMAND • '[' COMMAND ']'
   24   | COMMAND •

    '.'  shift, and go to state 34
    '['  shift, and go to state 36
    '('  shift, and go to state 24

    $default  reduce using rule 24 (cc)


State 30

   21 cc: COMMAND '.' cc •

    $default  reduce using rule 21 (cc)


State 31

   23 cc: COMMAND '[' COMMAND • ']'

    ']'  shift, and go to state 37


State 32

   22 cc: COMMAND '(' cp •

    $default  reduce using rule 22 (cc)


State 33

   19 cp: cc • ')'
   20   | cc • ',' cp

    ')'  shift, and go to state 38
    ','  shift, and go to state 39


State 34

   21 cc: COMMAND '.' • cc

    COMMAND   shift, and go to state 27
    FILENAME  shift, and go to state 5

    cc  go to state 30


State 35

   14 s: s COMMAND '=' cc ';' •

    $default  reduce using rule 14 (s)


State 36

   13 s: s COMMAND '.' COMMAND '[' • COMMAND ']' '=' cc ';'
   23 cc: COMMAND '[' • COMMAND ']'

    COMMAND  shift, and go to state 40


State 37

   23 cc: COMMAND '[' COMMAND ']' •

    $default  reduce using rule 23 (cc)


State 38

   19 cp: cc ')' •

    $default  reduce using rule 19 (cp)


State 39

   20 cp: cc ',' • cp

    COMMAND   shift, and go to state 27
    FILENAME  shift, and go to state 5

    cp  go to state 41
    cc  go to state 33


State 40

   13 s: s COMMAND '.' COMMAND '[' COMMAND • ']' '=' cc ';'
   23 cc: COMMAND '[' COMMAND • ']'

    ']'  shift, and go to state 42


State 41

   20 cp: cc ',' cp •

    $default  reduce using rule 20 (cp)


State 42

   13 s: s COMMAND '.' COMMAND '[' COMMAND ']' • '=' cc ';'
   23 cc: COMMAND '[' COMMAND ']' •

    '='  shift, and go to state 43

    $default  reduce using rule 23 (cc)


State 43

   13 s: s COMMAND '.' COMMAND '[' COMMAND ']' '=' • cc ';'

    COMMAND   shift, and go to state 27
    FILENAME  shift, and go to state 5

    cc  go to state 44


State 44

   13 s: s COMMAND '.' COMMAND '[' COMMAND ']' '=' cc • ';'

    ';'  shift, and go to state 45


State 45

   13 s: s COMMAND '.' COMMAND '[' COMMAND ']' '=' cc ';' •

    $default  reduce using rule 13 (s)
